--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "commander": "^12.0.0",
     "cosmiconfig": "^9.0.0",
     "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "inquirer": "^9.2.0",
     "openai": "^4.28.0",
     "ora": "^8.0.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.0",
+    "@types/handlebars": "^4.0.40",
     "@types/inquirer": "^9.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
