--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@google/generative-ai": "^0.2.0",
     "boxen": "^7.1.0",
     "chalk": "^5.3.0",
+    "chokidar": "^5.0.0",
     "commander": "^12.0.0",
     "cosmiconfig": "^9.0.0",
+    "fast-glob": "^3.3.3",
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "inquirer": "^9.2.0",
@@ -47,7 +49,7 @@
     "@types/handlebars": "^4.0.40",
     "@types/inquirer": "^9.0.0",
     "@types/jest": "^29.5.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.30",
     "@vitest/ui": "^4.0.17",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.0",
